<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CreateClassActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar_layout" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lesson_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_very_big_size"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/margin_very_big_size"
                    android:hint="@string/lesson_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_lesson_book">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/add_lesson"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/level_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/input_level"
                    app:layout_constraintEnd_toEndOf="@+id/endtime_layout"
                    app:layout_constraintStart_toStartOf="@+id/starttime_layout"
                    app:layout_constraintTop_toBottomOf="@+id/starttime_layout"
                    app:startIconDrawable="@drawable/ic_date">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/input_levels"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/input_date"
                    app:layout_constraintEnd_toEndOf="@+id/lesson_layout"
                    app:layout_constraintStart_toStartOf="@+id/lesson_layout"
                    app:layout_constraintTop_toBottomOf="@+id/lesson_layout"
                    app:startIconDrawable="@drawable/ic_date">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/add_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/starttime_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/input_starttime"
                    app:layout_constraintEnd_toStartOf="@+id/endtime_layout"
                    app:layout_constraintStart_toStartOf="@+id/date_layout"
                    app:layout_constraintTop_toBottomOf="@+id/date_layout"
                    app:startIconDrawable="@drawable/ic_time">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/add_starttime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/endtime_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/input_endtime"
                    app:layout_constraintEnd_toEndOf="@+id/date_layout"
                    app:layout_constraintStart_toEndOf="@+id/starttime_layout"
                    app:layout_constraintTop_toBottomOf="@+id/date_layout">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/add_endtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_teacher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/level_layout"
                    app:layout_constraintStart_toStartOf="@+id/level_layout"
                    app:layout_constraintTop_toBottomOf="@+id/level_layout"
                    app:layout_constraintVertical_bias="0.0">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_add_teacher"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:gravity="center"
                            android:text="@string/add_teacher"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/img_profile"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/profile_placeholder"
                            android:visibility="gone"
                            app:civ_border_color="@color/colorGrayBorder"
                            app:civ_border_width="2dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tv_teacher_name"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_teacher_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:text="@string/tv_teacher_name"
                            android:textSize="@dimen/font_size"
                            android:textStyle="bold"
                            android:visibility="gone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/img_profile"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_nomor_induk"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/request_data"
                            android:textSize="@dimen/font_size"
                            android:visibility="gone"
                            app:layout_constraintEnd_toEndOf="@+id/tv_teacher_name"
                            app:layout_constraintStart_toStartOf="@+id/tv_teacher_name"
                            app:layout_constraintTop_toBottomOf="@+id/tv_teacher_name" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_change"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/btn_change"
                            android:textAllCaps="false"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/btn_profile"
                            app:layout_constraintTop_toBottomOf="@+id/tv_nomor_induk" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_profile"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:text="@string/check_profile"
                            android:textAllCaps="false"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="@+id/btn_change"
                            app:layout_constraintEnd_toStartOf="@+id/btn_change"
                            app:layout_constraintStart_toStartOf="@+id/tv_nomor_induk"
                            app:layout_constraintTop_toTopOf="@+id/btn_change" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_to_class"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:visibility="gone"
                    app:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_class_in_white"
                    app:tint="@color/colorWhite" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>